Fixed alignment of chore cards

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -24,6 +24,7 @@
 
 .card-body{
   background: #F2F2F2;
+  padding: 2rem;
 }
 
 h2 {
